# stable-datasets

./: .buildinfo  .gitattributes  .gitignore  CHANGELOG.md  README.md  generate_teaser.py  index.html  objects.inv  pyproject.toml  requirements.txt  searchindex.js  setup.py
.doctrees/: environment.pickle  index.doctree  modules.doctree  stable_datasets.doctree  stable_datasets.images.doctree  stable_datasets.timeseries.doctree
.doctrees/datasets/: arabic_characters.doctree  arabic_digits.doctree  cars196.doctree  cars3d.doctree  cc3m.doctree  cifar10.doctree  cifar100.doctree  cifar100_c.doctree  cifar10_c.doctree  clevrer.doctree  country211.doctree  cub200.doctree  dsprites.doctree  dsprites_color.doctree  dsprites_noise.doctree  dsprites_scream.doctree  dtd.doctree  e_mnist.doctree  face_pointing.doctree  fashion_mnist.doctree  flowers102.doctree  food101.doctree  hasy_v2.doctree  index.doctree  k_mnist.doctree  linnaeus5.doctree  medmnist.doctree  not_mnist.doctree  rock_paper_scissor.doctree  shapes3d.doctree  small_norb.doctree  stl10.doctree  svhn.doctree
.doctrees/introduction/: contributing.doctree  quickstart.doctree  showcase.doctree
.github/workflows/: main.yml  testing.yaml
_modules/: index.html
_static/: documentation_options.js  pygments.css
aidatasets/: __init__.py  _version.py  dataset.py  loader.py  utils.py
aidatasets/images/: HASYv2.py  Linnaeus5.py  __init__.py  arabic_characters.py  arabic_digits.py  awa2.py  beans.py  cars196.py  celeb.py  celeb_a.py  cifar10.py  cifar100.py  cifar100_c.py  cifar10_c.py  country211.py  cub200.py  dsprites.py  dtd.py  e_mnist.py  emnist.py  face_pointing.py  fashion_mnist.py  fashionmnist.py  fgvc_aircraft.py  fgvcaircraft.py  flowers102.py  food101.py  hasy_v2.py  ibeans.py  imagenette.py  kmnist.py  linnaeus5.py  med_mnist.py  medmnist.py  mnist.py  notMNIST.py  notmnist.py  places365_small.py  rock_paper_scissor.py  rock_paper_scissors.py  (+5 more)
aidatasets/timeseries/: CatsDogs.py  JapaneseVowels.py  MosquitoSound.py  Phoneme.py  RightWhaleCalls.py  TUTacousticscenes2017.py  UCR_multivariate.py  UCR_univariate.py  UrbanSound.py  VoiceGenderDetection.py  __init__.py  audiomnist.py  birdvox_70k.py  birdvox_dcase_20k.py  dcase_2019_task4.py  freefield1010.py  groove_MIDI.py  gtzan.py  irmas.py  picidae.py  seizures_neonatal.py  sonycust.py  speech_commands.py  vocalset.py  warblr.py
datasets/: index.html
datasets/arabic_characters/: index.html
datasets/arabic_digits/: index.html
datasets/cars196/: index.html
datasets/cars3d/: index.html
datasets/cc3m/: index.html
datasets/cifar10/: index.html
datasets/cifar100/: index.html
datasets/cifar100_c/: index.html
datasets/cifar10_c/: index.html
datasets/clevrer/: index.html
datasets/country211/: index.html
datasets/cub200/: index.html
datasets/dsprites/: index.html
datasets/dsprites_color/: index.html
datasets/dsprites_noise/: index.html
datasets/dsprites_scream/: index.html
datasets/dtd/: index.html
datasets/e_mnist/: index.html
datasets/face_pointing/: index.html
datasets/fashion_mnist/: index.html
datasets/flowers102/: index.html
datasets/food101/: index.html
datasets/hasy_v2/: index.html
datasets/k_mnist/: index.html
datasets/linnaeus5/: index.html
datasets/medmnist/: index.html
datasets/not_mnist/: index.html
datasets/rock_paper_scissor/: index.html
datasets/shapes3d/: index.html
datasets/small_norb/: index.html
datasets/stl10/: index.html
datasets/svhn/: index.html
examples/: submit_supervised.py  supervised.py
genindex/: index.html
introduction/contributing/: index.html
introduction/quickstart/: index.html
introduction/showcase/: index.html
modules/: index.html
py-modindex/: index.html
search/: index.html
stable_datasets/: index.html  utils.py
stable_datasets.images/: index.html
stable_datasets.timeseries/: index.html
stable_datasets/images/: dtd.py  (+18 more)
tests/: base_test.py
(+130 files in other folders)
