[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "stable-datasets"
description = "All dataset utilities in Numpy"
authors = [
    {name = "Randall Balestriero"},
]
requires-python = ">=3.10"
license = {text = "MIT"}
readme = {file = "README.md", content-type = "text/markdown"}
dependencies = [
    "numpy",
    "loguru",
    "datasets",
    "tqdm",
    "pillow",
    "pandas",
    "rich",
    "filelock",
    "requests-cache",
    "gdown",
    "scikit-learn",
    "rarfile",
    "torch",
    "rich",
    "h5py",
    "requests_cache",
    "pre-commit>=4.5.0",
    "torchcodec",
]

dynamic = ["version"]

[tool.setuptools]
packages = { find = { include = ["stable_datasets*"] } }

[tool.setuptools.dynamic]
version = {attr = "stable_datasets.__version__"}

[project.optional-dependencies]

# Development tools
dev = [
    "pytest",
    "coverage",
    "pytest-cov",
    "pytest-rich",
    "codecov",
    "pre-commit",
    "ruff",
    "stable-pretraining",
    "transformers",
    "wandb",
]

# Documentation tools
docs = [
    "sphinx",
    "sphinxawesome-theme",
    "sphinx-gallery",
    "sphinx-book-theme",
    "matplotlib",
    "memory_profiler",
    "sphinx_design",
    "myst-parser",
]

all = [

]

# =======================
#         TOOLS
# =======================

###################
## Pytest config ##
###################

[tool.pytest.ini_options]
pythonpath = "stable_datasets"
testpaths = ["stable_datasets/tests"]

# Test discovery patterns
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

# Custom markers
markers = [
    "large: Tests for datasets too large to run in CI",
]

#####################
## Coverage config ##
#####################

[tool.coverage.run]
source = ["stable_datasets"]
omit = [
    "*/tests/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@runtime_checkable",
    "class .*Protocol",
    "raise",
    "except",
    "register_parameter"
]

#################
## Ruff config ##
#################

# NOTE: borrowed and adapted from: huggingface/transformers

[tool.ruff]
target-version = "py310"
line-length = 119
fix = true

[tool.ruff.lint]
# Never enforce `E501` (line length violations).
# SIM300: Yoda condition detected
# SIM212: Checks for if expressions that check against a negated condition.
# SIM905: Consider using a list literal instead of `str.split`
# UP009: UTF-8 encoding declaration is unnecessary
# UP015: Unnecessary mode argument
# UP031: Use format specifiers instead of percent format
# UP004: Class `XXX` inherits from `object`
# UP028: Checks for for loops that can be replaced with yield from expressions
# UP045: Use `X | None` for type annotations
# UP007: Use `X | Y` for type annotations
# UP035: temporarily disabled to minimize upgrade changes
ignore = ["C901", "E501", "E741", "F402", "F823", "SIM1", "SIM300", "SIM212", "SIM905", "UP009", "UP015", "UP031", "UP028", "UP004", "UP045", "UP007", "UP035"]
# RUF013: Checks for the use of implicit Optional
#  in type annotations when the default parameter value is None.
select = ["C", "E", "F", "I", "W", "RUF013", "PERF102", "PLC1802", "PLC0208", "SIM", "UP"]
extend-safe-fixes = ["UP006"]

# old: config
# select = ["E4", "E7", "E9", "F", "D"]
# ignore = ["D100", "D102", "D103", "D104", "D105", "D107"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["stable_worldmodel"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google"
